--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     left:50%;
     transform:translate(-50%,-50%);
     background-image: linear-gradient(22deg,rgba(124, 192, 232, 0.9) 50%,#0a84c6 50%);
-    box-shadow: 0 1px 6px;
+    box-shadow: 0 1px 6px rgba(0,0,0,0.2),0 1px 4px rgba(0,0,0,0.24);
 }
 #pfp{
     width:120px;
